refactor: 플레이어 타입 계층 재설계로 Participant/Player 중복 제거
* Participant(abstract) → Player(class) → BettingPlayer 계층으로 단순화
* Player 인터페이스와 Participant 간 중복 메서드 선언 제거
* calculateProfit을 BettingPlayer로 이동하여 ISP 위반 해소