@@ -1,19 +1,12 @@
 package model.paticipant;
 
-import java.util.ArrayList;
-import java.util.Collections;
 import java.util.List;
 import java.util.function.Consumer;
 
 public record Players(List<Player> players) {
 
     public Players(List<Player> players) {
-        this.players = new ArrayList<>(players);
-    }
-
-    @Override
-    public List<Player> players() {
-        return Collections.unmodifiableList(players);
+        this.players = List.copyOf(players);
     }
 
     public void forEach(Consumer<? super Player> action) {
